correct z-index for calendar

--- a/src/features/TicketSearchForm/TicketSearchForm.scss
+++ b/src/features/TicketSearchForm/TicketSearchForm.scss
@@ -43,6 +43,16 @@
   position: absolute;
 }
 
+.react-datepicker-wrapper {
+  &:first-child {
+      margin-right: 40px;
+  }
+}
+
+.react-datepicker-popper {
+  z-index: 5!important;
+}
+
 .ticket-search-form__input {
   width: 325px;
   height: 60px;
